<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.karve.gomysuru1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_place"
            app:destination="@id/nav_places" />
        <action
            android:id="@+id/action_nav_home_to_nav_hotels"
            app:destination="@id/nav_hotels" />
        <action
            android:id="@+id/action_nav_home_to_nav_contact"
            app:destination="@id/nav_contact" />
        <action
            android:id="@+id/action_nav_home_to_nav_faq"
            app:destination="@id/nav_faq" />
        <action
            android:id="@+id/action_nav_home_to_nav_weather"
            app:destination="@id/nav_weather" />
        <action
            android:id="@+id/action_nav_home_to_nav_about"
            app:destination="@id/nav_about" />
    </fragment>

    <fragment
        android:id="@+id/nav_places"
        android:name="com.karve.gomysuru1.ui.place.PlacesFragment"
        android:label="@string/menu_places"
        tools:layout="@layout/fragment_places" />

    <fragment
        android:id="@+id/nav_hotels"
        android:name="com.karve.gomysuru1.ui.hotels.HotelsFragment"
        android:label="@string/menu_hotels"
        tools:layout="@layout/fragment_hotels" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.karve.gomysuru1.ui.contacts.ContactsFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/nav_faq"
        android:name="com.karve.gomysuru1.ui.faq.FaqFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faq" />
    <fragment
        android:id="@+id/nav_weather"
        android:name="com.karve.gomysuru1.ui.weather.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.karve.gomysuru1.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>