<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="8dp"
tools:context=".ui.place.PlacesFragment">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_loc1"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:scaleType="centerCrop"
         app:srcCompat="@drawable/mysore_palace"/>

    <Button
        android:id="@+id/bu_loc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/ic_menu_place"
        android:text="@string/place1" />

    <ImageView
        android:id="@+id/img_loc2"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:scaleType="centerCrop"

        app:srcCompat="@drawable/kiskindha_bonsai" />

    <Button
        android:id="@+id/bu_loc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/ic_menu_place"
        android:text="@string/place2" />

    <ImageView
        android:id="@+id/img_loc3"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:scaleType="centerCrop"

        app:srcCompat="@drawable/sri_chamarajendra_zoological_gardens" />


    <Button
        android:id="@+id/bu_loc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/ic_menu_place"
        android:text="@string/place3" />


    <ImageView
        android:id="@+id/img_loc4"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:scaleType="centerCrop"

        app:srcCompat="@drawable/brindaban_gardens" />


    <Button
        android:id="@+id/bu_loc4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/ic_menu_place"
        android:text="@string/place4" />


    <!---->

    <ImageView
        android:id="@+id/img_loc5"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/saint_philomena_church"/>

    <Button
        android:id="@+id/bu_loc5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/ic_menu_place"
        android:text="@string/place5" />

    <ImageView
        android:id="@+id/img_loc6"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:scaleType="centerCrop"

        app:srcCompat="@drawable/jagmohan_art_gallery" />

    <Button
        android:id="@+id/bu_loc6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/ic_menu_place"
        android:text="@string/place6" />

    <ImageView
        android:id="@+id/img_loc7"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:scaleType="centerCrop"

        app:srcCompat="@drawable/folk_lore_palace" />


    <Button
        android:id="@+id/bu_loc7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/ic_menu_place"
        android:text="@string/place7" />


    <ImageView
        android:id="@+id/img_loc8"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:scaleType="centerCrop"

        app:srcCompat="@drawable/varashwamy_temple" />


    <Button
        android:id="@+id/bu_loc8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/ic_menu_place"
        android:text="@string/place8" />

    <Button
        android:id="@+id/bu_loc9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/ic_menu_place"
        android:text="More Places To Check"
        android:textColor="#000000"
        app:backgroundTint="#A985E8" />


</LinearLayout>

</ScrollView>
